# VideoSegmentationBiExp

./: CMakeLists.txt  README.md  imagegraph.cpp  imagegraph.h  main.cpp  makefile  maxflow.cpp
Eigen/src/.svn/: all-wcprops
Eigen/src/Cholesky/.svn/: all-wcprops  entries
Eigen/src/Core/arch/.svn/: entries
Eigen/src/Core/arch/AltiVec/.svn/: entries
Eigen/src/Core/arch/Default/.svn/: entries
Eigen/src/Core/arch/NEON/.svn/: all-wcprops  entries
Eigen/src/Core/arch/SSE/.svn/: all-wcprops  entries
Eigen/src/Core/products/.svn/: all-wcprops  entries
Eigen/src/Core/util/.svn/: all-wcprops
Eigen/src/Eigen2Support/.svn/: all-wcprops
Eigen/src/Eigen2Support/Geometry/.svn/: all-wcprops  entries
Eigen/src/Eigenvalues/.svn/: all-wcprops  entries
Eigen/src/Geometry/arch/.svn/: all-wcprops
Eigen/src/Householder/.svn/: entries
Eigen/src/Jacobi/.svn/: entries
Eigen/src/LU/.svn/: entries
Eigen/src/LU/arch/.svn/: entries
Eigen/src/QR/.svn/: entries
Eigen/src/SVD/.svn/: all-wcprops
Eigen/src/StlSupport/.svn/: all-wcprops  entries
src/: CMakeLists.txt  CMakeLists.txt~  GMM.cpp  GMM.h  SLIC.cpp  SLIC.h  main.cpp
